--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -27,20 +27,24 @@ nav{
         border-radius: 15px;
         font-size: 16px;
         font-weight: normal;
-        text-decoration: none;
     }
     footer{
         position: absolute;
-        bottom: 75px;
+        bottom: 50px;
         left: 30px;
         display: flex;
         flex-direction: column;
         gap: 20px;
+        p{
+            cursor: default;
+            color: rgba(255, 255, 255, 0.5);
+        }
         a{
-            text-decoration: none;
+            color: rgba(255, 255, 255, 0.5);
             i{
                 margin-left: 5px;
                 transform: rotate(45deg);
+                color: rgba(255, 255, 255, 0.5);
             }
         }
     }
