--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -8,6 +8,7 @@
     background: rgba(0, 0, 0, 0.5);
 }
 .continue-popup{
+    cursor: default;
     width: 800px;
     height: 560px;
     margin: auto;
@@ -36,10 +37,10 @@
         color: white;
     }
     p{
-        font-size: 18px;
+        font-size: 16px;
         width: 600px;
         margin: 40px auto;
-        line-height: 25px;
+        line-height: 20px;
         color: rgba(255, 255, 255, 0.5);
     }
     a{
@@ -49,5 +50,6 @@
         padding: 10px 40px;
         border-radius: 10px;
         font-size: 18px;
+        font-weight: normal;
     }
 }
