--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -2,10 +2,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     background: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 .continue-popup{
     cursor: default;
