--- a/src/Styles/SongForm.css
+++ b/src/Styles/SongForm.css
@@ -8,7 +8,6 @@ form{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    align-items: center;
     header{
         width: 600px;
         box-sizing: border-box;
@@ -34,13 +33,20 @@ form{
     }
     label{
         font-size: 14px;
+        display: inline-block;
+        text-align: right;
+        width: 100px;
     }
-    input[type="text"]{
+    input{
         background: transparent;
         border: 1px solid rgba(255, 255, 255, 0.5);
-        margin-left: 5px;;
         width: 400px;
         padding: 0 2px;
+        display: inline-block;
+    }
+    input[type="number"]{
+        width: 40px;
+        margin: 0;
     }
     .checkbox{
         margin-right: 403px;
@@ -67,7 +73,8 @@ form{
         display: flex;
         justify-content: space-between;
         width: 520px;
-        margin-top: 225px;
+        margin: auto;
+        margin-top: 200px;
         .delete-button{
             font-size: 14px;
             color: rgba(255, 255, 255, 0.5);
@@ -93,4 +100,8 @@ form{
             gap: 5px;
         }
     }
+}
+.input{
+    display: flex;
+    gap: 5px;
 }
